# law-search-summary-chatbot

./: .gitignore  README.md  env.example  google_cse_search.py  law_article_extractor.py  law_content_fetcher.py  law_search_integrated.py  plan.md  pyproject.toml  test_google_cse.py  test_improved_pattern.py
