[project]
name = "law-search-summary-chatbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "beautifulsoup4>=4.13.4",
    "crawl4ai>=0.6.3",
    "lxml>=5.3,<6.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "tavily-python>=0.7.9",
]
